--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "multer": "^1.4.3",
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5",
-    "yup": "^0.32.9",
-    "sequelize-cli": "^6.2.0"
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "nodemon": "^2.0.13",
